komposefiles/inference-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: inference
  name: inference
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inference
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/netinference: "true"
        io.kompose.service: inference
    spec:
      containers:
        - image: c4ttiv0/mlops-puj:inference
          name: inference
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always
status: {}
