komposefiles/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: streamlit
  name: streamlit
spec:
  type: NodePort
  ports:
    - name: "8089"
      port: 8089
      targetPort: 8501
      nodePort: 30000
  selector:
    io.kompose.service: streamlit
